package org.example.network;

/**
 * Перечисление статусов ответа сервера.
 * Используется для индикации успешности выполнения команды на стороне клиента.
 */
public enum ResponseStatus {
    /** Команда выполнена успешно */
    OK,
    /** Произошла ошибка (неверные данные, объект не найден и т.д.) */
    ERROR
}